Add documentation to `/api/v1/level`
